Prevent wrapping on the stats row

--- a/app/styles/directives/_cost-to-break-calculator.scss
+++ b/app/styles/directives/_cost-to-break-calculator.scss
@@ -12,6 +12,7 @@ cost-to-break-calculator {
     padding-top: 5px;
     padding-left: 5px;
     font-size: 0.85em;
+    white-space: nowrap;
 
     .stat-label {
       @extend .text-muted;
